# cgvg.rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md  TODO.md  flake.nix
src/: common.rs  main.rs
src/cg/: lib.rs  main.rs  print_terminal.rs  ripgrep_json.rs  views.rs
src/vg/: main.rs
