[package]
name = "rgvg"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "cg"
path = "src/cg/main.rs"

[[bin]]
name = "vg"
path = "src/vg/main.rs"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.7", features = ["derive"] }
colored = "2.1.0"
env_logger = { version = "0.10", default-features = false }
itertools = "0.13.0"
libc = "0.2.155"
log = "0.4.21"
memmap2 = "0.9.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
terminal_size = "0.3.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.6"
